Добавлен jar файл и описание к нему